a lot of changes made
